--- a/HR Analytics.ipynb
+++ b/HR Analytics.ipynb
@@ -2117,30 +2117,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fit_ml_algo(algo,x_train,y_train,cv):\n",
     "    \n",
     "    model=algo.fit(x_train,y_train)\n",
-    "    acc=round(model.score(x_train,y_train)*100,2)\n",
-    "    train_pred = model_selection.cross_val_predict(algo,x_train,y_train,cv=cv,n_jobs=-1)\n",
-    "    acc_cv=round(metrics.accuracy_score(y_train,train_pred)*100,2)\n",
+    "    acc=round(model.score(x_test,y_test)*100,2)\n",
+    "    train_pred = model_selection.cross_val_predict(algo,x_test,y_test,cv=cv,n_jobs=-1)\n",
+    "    acc_cv=round(metrics.accuracy_score(y_test,train_pred)*100,2)\n",
     "    return(train_pred, acc, acc_cv)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 91.72\n",
-      "Accuracy CV 10-Fold: 91.71\n"
+      "Accuracy: 92.02\n",
+      "Accuracy CV 10-Fold: 92.02\n"
      ]
     }
    ],
@@ -2154,49 +2154,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 92.05\n",
-      "Accuracy CV 10-Fold: 92.02\n"
-     ]
-    }
-   ],
-   "source": [
-    "train_pred_log, acc_log, acc_cv_log =  fit_ml_algo( LogisticRegression() , x_test, y_test, 10)\n",
-    "print(\"Accuracy: \"+str(acc_log))\n",
-    "print(\"Accuracy CV 10-Fold: \"+str(acc_cv_log))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 178,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 93.14\n",
-      "Accuracy CV 10-Fold: 91.58\n"
+      "Accuracy: 91.79\n",
+      "Accuracy CV 10-Fold: 91.64\n"
      ]
     }
    ],
@@ -2210,49 +2176,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 92.84\n",
-      "Accuracy CV 10-Fold: 91.64\n"
-     ]
-    }
-   ],
-   "source": [
-    "train_pred_knn, acc_knn, acc_cv_knn =  fit_ml_algo( KNeighborsClassifier(), x_test, y_test, 10)\n",
-    "print(\"Accuracy: \"+str(acc_knn))\n",
-    "print(\"Accuracy CV 10-Fold: \"+str(acc_cv_knn))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 179,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 91.27\n",
-      "Accuracy CV 10-Fold: 91.27\n"
+      "Accuracy: 91.46\n",
+      "Accuracy CV 10-Fold: 91.46\n"
      ]
     }
    ],
@@ -2266,49 +2198,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 91.46\n",
-      "Accuracy CV 10-Fold: 91.46\n"
-     ]
-    }
-   ],
-   "source": [
-    "train_pred_nb, acc_nb, acc_cv_nb =  fit_ml_algo( GaussianNB(), x_test, y_test, 10)\n",
-    "print(\"Accuracy: \"+str(acc_nb))\n",
-    "print(\"Accuracy CV 10-Fold: \"+str(acc_cv_nb))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 180,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 91.7\n",
-      "Accuracy CV 10-Fold: 91.69\n"
+      "Accuracy: 91.95\n",
+      "Accuracy CV 10-Fold: 91.98\n"
      ]
     }
    ],
@@ -2322,49 +2220,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 92.02\n",
-      "Accuracy CV 10-Fold: 91.98\n"
-     ]
-    }
-   ],
-   "source": [
-    "train_pred_svc, acc_svc, acc_cv_svc =  fit_ml_algo( LinearSVC(), x_test, y_test, 10)\n",
-    "print(\"Accuracy: \"+str(acc_svc))\n",
-    "print(\"Accuracy CV 10-Fold: \"+str(acc_cv_svc))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 181,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 91.48\n",
-      "Accuracy CV 10-Fold: 91.41\n"
+      "Accuracy: 91.76\n",
+      "Accuracy CV 10-Fold: 91.55\n"
      ]
     }
    ],
@@ -2378,49 +2242,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 91.76\n",
-      "Accuracy CV 10-Fold: 91.65\n"
-     ]
-    }
-   ],
-   "source": [
-    "train_pred_sgd, acc_sgd, acc_cv_sgd=fit_ml_algo(SGDClassifier(),x_test,y_test,10)\n",
-    "print('Accuracy: '+str(acc_sgd))\n",
-    "print('Accuracy CV 10-Fold: '+str(acc_cv_sgd))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 182,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 99.97\n",
-      "Accuracy CV 10-Fold: 89.65\n"
+      "Accuracy: 89.76\n",
+      "Accuracy CV 10-Fold: 89.64\n"
      ]
     }
    ],
@@ -2434,49 +2264,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 99.99\n",
-      "Accuracy CV 10-Fold: 89.46\n"
-     ]
-    }
-   ],
-   "source": [
-    "train_pred_dt, acc_dt, acc_cv_dt=fit_ml_algo(DecisionTreeClassifier(),x_test,y_test,10)\n",
-    "print('Accuracy: '+str(acc_dt))\n",
-    "print('Accuracy CV 10-Fold: '+str(acc_cv_dt))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 183,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 93.73\n",
-      "Accuracy CV 10-Fold: 93.84\n"
+      "Accuracy: 93.92\n",
+      "Accuracy CV 10-Fold: 93.85\n"
      ]
     }
    ],
@@ -2484,26 +2280,6 @@
     "## Gradient Boost Trees\n",
     "\n",
     "train_pred_gbt, acc_gbt, acc_cv_gbt=fit_ml_algo(GradientBoostingClassifier(),x_train,y_train,10)\n",
-    "print('Accuracy: '+str(acc_gbt))\n",
-    "print('Accuracy CV 10-Fold: '+str(acc_cv_gbt))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 198,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 94.0\n",
-      "Accuracy CV 10-Fold: 93.85\n"
-     ]
-    }
-   ],
-   "source": [
-    "train_pred_gbt, acc_gbt, acc_cv_gbt=fit_ml_algo(GradientBoostingClassifier(),x_test,y_test,10)\n",
     "print('Accuracy: '+str(acc_gbt))\n",
     "print('Accuracy CV 10-Fold: '+str(acc_cv_gbt))"
    ]
